--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script src="https://unpkg.com/react@15/dist/react.js"></script>
 		<script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
 		<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+		<script src="http://localhost:8080/public/javascript/fetch-2.0.1.js"></script>
 	</head>
 
 	<body>
