added a page to manage classes

--- a/player.html
+++ b/player.html
@@ -66,7 +66,7 @@
 			const statsDefinition = [
 				{name:"Strength",id:"str"},
 				{name:"Dexterity",id:"dex"},
-				{name:"Consitution",id:"con"},
+				{name:"Constitution",id:"con"},
 				{name:"Intelligence",id:"int"},
 				{name:"Wisdom",id:"wis"},
 				{name:"Charisma",id:"cha"}
