now returning available classes and races at the world page

--- a/world.html
+++ b/world.html
@@ -12,6 +12,8 @@
 	<body>
 		<div id="root"></div>
 		<script type="text/babel">
+		const classes = <SERVER_REPLACE_CLASSES>;
+		const races = <SERVER_REPLACE_RACES>;
 
 
 			class PlayerList extends React.Component {
