updated world api

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
 											return ({worlds:prevState.worlds});
 										});
 									}
+									return response.json();
+								}).then((json)=>{
+									console.log(json);
 								});
 							} else {
 								this.setState((prevState)=>{
